<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name-->

    <string name="app_name">Read-Now!</string>

    <!-- Sidebar stuff-->
    <string name="action_settings">Settings</string>
    <string name="action_next">Next</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string-array name="drawer_items">
        <item>Read Now!</item>
        <item>Home</item>
        <item>Search</item>
        <item>Settings</item>
    </string-array>

    <!-- Home Fragment-->
    <string name="welcome">Welcome!</string>
    <string name="read_something">Want to read something?</string>
    <string name="search_here">Search Here</string>
    <string name="or">Or</string>

    <!--  NetworkActivity -->
    <string name="error_load">Unable to load content, so check yur network connection buddy!</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="page_title">Wikipedia Title!!!</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>


</resources>
