<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:id="@+id/welcome"
                android:textSize="45sp"
                android:layout_marginTop="49dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#767676"
                android:textStyle="bold|italic"
                android:typeface="sans"
                android:textIsSelectable="false"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_something"
                android:id="@+id/textView"
                android:layout_below="@+id/welcome"
                android:layout_alignRight="@+id/welcome"
                android:textSize="15sp"
                android:textIsSelectable="false"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchbox"
                android:editable="true"
                android:hint="@string/search_here"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:textIsSelectable="false"
                android:textColorHint="#c4c4c4"
                android:inputType="text"
                android:typeface="sans"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="false"
                android:textSize="30sp"
                android:layout_marginTop="17dp"
                android:layout_below="@+id/or"
                android:layout_centerHorizontal="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/or"
                android:id="@+id/or"
                android:textIsSelectable="false"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="40dp"
                android:id="@+id/readButton"
                android:layout_marginBottom="30dp"
                android:layout_above="@+id/or"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:singleLine="true"
                android:textStyle="italic"
                android:layout_alignParentStart="false"
                android:enabled="true"
                android:focusable="false"/>
</RelativeLayout>